# AIntegrity-New

./: CODEX_FORENSIC_REPORT.md  DEVLOG.md  FEASIBILITY_ASSESSMENT.md  HANDOVER.md  PAYLOADGUARD_WHITEPAPER.md  README.md  example_usage.py  payloadguard_test_suite.py  pli_engine.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  sentinel.yml
aintegrity/: __init__.py  audit.py  orchestrator.py
aintegrity/core/: __init__.py  data_structures.py  vil.py
aintegrity/dashboard/: __init__.py  app.py
aintegrity/dashboard/templates/: dashboard.html
aintegrity/modules/: __init__.py  llm_adapter.py  multimodal_verifier.py  pli_analyzer.py  threat_monitor.py  trust_grader.py
docs/: Project_Sentinel_Whitepaper.md
tests/: conftest.py  sentinel_runner.py  test_eval_llm_adapter.py  test_eval_orchestrator.py  test_eval_pli.py  test_eval_pli_analyzer.py  test_eval_pli_enhanced.py  test_eval_threat.py  test_eval_trust.py  test_eval_vil.py
