[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aintegrity"
version = "4.0.0"
description = "Neuro-symbolic AI integrity auditing framework"
readme = "FEASIBILITY_ASSESSMENT.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "auditing", "trust", "integrity", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
llm = ["openai>=1.0", "anthropic>=0.20"]
multimodal = ["transformers>=4.30", "torch>=2.0", "Pillow>=10.0", "imagehash>=4.3"]
dashboard = ["flask>=3.0"]
dev = ["pytest>=8.0"]
all = ["aintegrity[crypto,llm,multimodal,dashboard,dev]"]

[project.scripts]
sentinel = "tests.sentinel_runner:main"
sentinel-dashboard = "aintegrity.dashboard.app:main"

[tool.setuptools.packages.find]
include = ["aintegrity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sentinel: Project Sentinel evaluation metrics",
    "trust: Trust scoring and decay model metrics",
    "threat: Adversarial threat detection metrics",
    "vil: Verifiable Interaction Ledger integrity metrics",
    "orchestrator: End-to-end orchestrator metrics",
    "pli: Persistent Logical Interrogation metrics",
    "drift: Data drift detection metrics",
    "llm: LLM adapter integration metrics",
]
addopts = "-v --tb=short"
